# singularity

./: AGENTS.md  AppDelegate.swift  AudioDataExchange.h  CANVAS_API.md  CMakeLists.txt  CMakePresets.json  IFileWatcher.h  IJSEngine.h  IParameterProvider.h  IParameterStore.h  IRenderer.h  IRenderer2.h  QuickJSEngine.cpp  QuickJSEngine.h  QuickJSEngine2.cpp  QuickJSEngine2.h  QuickJSEngineCanvasAPI.h  README.md  SingularityController.cpp  SingularityController.h  SingularityGraphics.cpp  SingularityGraphics.h  SingularityGraphics2.cpp  SingularityGraphics2.h  SingularityGraphicsWin.h  SingularityPlugin.h  SkiaRenderer.cpp  SkiaRenderer.h  SkiaRenderer2.cpp  SkiaRenderer2.h  SkiaRendererDraw.cpp  TODO_component_properties.md  TestWidget.h  VisageRenderer.cpp  VisageRenderer.h  VisageRenderer2.cpp  VisageRenderer2.h  Widget.h  chocFileWatcher.cpp  chocFileWatcher.h  (+10 more)
.github/: copilot-instructions.md
.github/agents/: javascript-quicksjs-visage.agent.md
.github/workflows/: build.yaml
Example/: App.js  CMakeLists.txt  Example.cpp  Example.h  basic.js  bloom.js  gradients.js  hello.js  knob.js  main.js  post_effects.js  slider.js
capi/: SingularityCapi.cmake  SingularityCapi.h  SingularityCapiEntry.cpp.in
capi/tests/: CMakeLists.txt  CapiAdapterTests.cpp
clap/: clap.cpp
cmake/: ASIO.cmake  ASIOSDK.cmake  AddSwift.cmake  CHOC.cmake  CLAP.cmake  DMON.cmake  GLFW.cmake  Miniz.cmake  QUICKJS.cmake  SDL.cmake  SFML.cmake  SINGULARITY.cmake  SKIA.cmake  SingularityPlugin.cmake  VCPKG.cmake  VISAGE.cmake  VST3.cmake  WebView2.cmake  embed_resources.cmake  generate_loader.cmake
core/: CMakeLists.txt  Editor.cpp  Editor.h  SingularityController.cpp  SingularityController.h  SingularityEditor.cpp  SingularityEditor.h  SingularityProcessor.h  module.modulemap
core/gui/: CMakeLists.txt  singularity_ResourceManager.cpp  singularity_ResourceManager.h  singularity_Webview.cpp  singularity_Webview.h  testgui.cpp  testgui.h
core/gui/platform/linux/: singularity_Webview_Linux.cpp  singularity_Webview_Linux.h
core/gui/platform/macos/: WebViewMacos.cpp  WebViewMacos.h  WebViewMacos.swift  WebViewMacosAdapter.cpp
core/gui/platform/windows/: singularityGUI_Windows.cpp  singularityGUI_Windows.cpp.backup  singularityGUI_Windows.h
core/native/: CMakeLists.txt  main.cpp
core/native/direct2d/: CMakeLists.txt  main.cpp
core/native/glfw/: CMakeLists.txt  main.cpp
core/native/linux/: CMakeLists.txt  EditorLinux.cpp  EditorLinux.h  main.cpp
core/native/macos/: CMakeLists.txt  EditorFactory.cpp  EditorFactory.h  EditorMac.cpp  EditorMac.h  coreAudio.cpp  coreAudio.h  mainMacosApp.swift  module.modulemap
core/native/macos/mainMacosTests/: mainMacosTests.swift
core/native/sdl/: CMakeLists.txt  main.cpp
core/native/windows/: CMakeLists.txt  EditorWin.cpp  EditorWin.h  mainWin.cpp
core/plugins/VST3/: CMakeLists.txt  cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h  vst3editor.cpp  vst3editor.h
core/plugins/VST3/SingularityInstrument/: CMakeLists.txt
core/plugins/VST3/SingularityInstrument/resource/: editor.uidesc
core/plugins/VST3/SingularityInstrument/source/: cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h
core/plugins/VST3/platform/: VST3Window.h
core/plugins/VST3/platform/linux/: VST3WindowLinux.cpp
core/plugins/VST3/platform/macos/: VST3WindowMacos.cpp  VST3WindowMacos.swift
core/plugins/VST3/platform/windows/: VST3WindowWindows.cpp
core/plugins/VST3/resource/: editor.uidesc
core/standalone/: AudioManager.h  CMakeLists.txt  ISingularityAudioBackend.h  StandaloneHelper.h  main.cpp  module.modulemap
core/standalone/linux/: CMakeLists.txt  main.cpp
core/standalone/macos/: CMakeLists.txt  main.swift
core/standalone/windows/: CMakeLists.txt  main.cpp  new_main.cpp
core/standalone/windows/audio/: AudioManager_Win.cpp  CMakeLists.txt  SingularityASIO.cpp  SingularityASIO.h
docs/: vst3-parameter-value-policy.md
example/: CMakeLists.txt  ExampleController.cpp  ExampleController.h  ExampleEditor.cpp  ExampleEditor.h  ExampleProcessor.cpp  ExampleProcessor.h
example/ui/src/: App.jsx
examples/: CMakeLists.txt
examples/ExampleEffect/: App.js  CMakeLists.txt  ExampleEffect.h  blend_modes.js  paths.js  test.js  tmpshader.h
examples/ExampleInstrument/: App.js  CMakeLists.txt  ExampleInstrument.h  button.js
macos/: AppDelegate.swift  Info.plist  module.modulemap
macos2/mainMacos/mainMacos/: EditorMac.cpp  EditorMac.h  mainMacosApp.swift  module.modulemap
macos2/mainMacos/mainMacosUITests/: mainMacosUITests.swift  (+1 more)
platform/: IWindow.h  NativeWindow.h
platform/linux/: CMakeLists.txt  SkiaRenderer_linux.cpp  VulkanContext.cpp  VulkanContext.h  X11Window.cpp  X11Window.h
platform/macos/: AppKitWindow.cpp  AppKitWindow.h  AppKitWindow.mm  CocoaWindow.h  CocoaWindow.mm  SkiaMetal.mm
platform/vulkan/: SkiaVulkan.cpp
platform/windows/: Win32Window.cpp  Win32Window.h
standalone/: ASIO.cpp  ASIO.h  ISingularityAudio.cpp  ISingularityAudio.h  IWindow.h  NativeWindow.h  PipeWire.cpp  PipeWire.h  SingularityApp.cmake  coreAudio.cpp  coreAudio.h  main.cpp  main2.cpp
standalone/linux/: WaylandWindow.h  X11Window.h
standalone/macos/: CocoaWindow.h  CocoaWindow.mm
standalone/windows/: Win32Window.h
utilities/: SingularityQueue.h
vst3/: CMakeLists.txt  SingularityView.cpp  SingularityView.h  SingularityVst3.cmake  helloworldcontroller.cpp  helloworldcontroller.h  helloworldprocessor.cpp  vst3controller.cpp  vst3controller.h  vst3entry.cpp  vst3parameterhelpers.h  vst3plugincids.h.in  vst3processor.cpp  vst3processor.h  vst3version.h  win32resource.rc
vst3/resource/: win32resource.rc
vst3/source/: SingularityView.cpp  SingularityView.h  helloworldcids.h  helloworldcontroller.cpp  helloworldcontroller.h  helloworldentry.cpp  helloworldprocessor.cpp  helloworldprocessor.h
widgets/: button.js  dropdown.js  knob.js  levelmeter.js  root.js  scrollview.js  settings.js  slider.js  stepselector.js  ui.js  waveform.js  widget.js
windows/: main.cpp
